# asr-project

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.txt  requirements.txt
data/shaders/: es2_phong_shader.frag  es2_phong_shader.vert
include/: asr.h
include/geometries/: es2_geometry.h  geometry.h  geometry_generators.h  vertex.h
include/lights/: ambient_light.h  directional_light.h  light.h  point_light.h  spot_light.h
include/materials/: constant_material.h  es2_constant_material.h  es2_phong_material.h  material.h  phong_material.h
include/math/: aabb.h  plane.h  ray.h  sphere.h
include/objects/: camera.h  mesh.h  object.h
include/renderer/: es2_renderer.h  es2_shader.h  renderer.h  shader.h
include/scene/: scene.h
include/textures/: es2_texture.h  texture.h
include/utilities/: utilities.h
include/window/: es2_sdl_window.h  window.h
tests/: box_test.cpp  circle_test.cpp  general_usage_test.cpp  hello_world_test.cpp  instancing_test.cpp  lighting_test.cpp  material_properties_test.cpp  no_instancing_test.cpp  normal_mapping_test.cpp  rectangle_test.cpp  ring_test.cpp  scene_graph_test.cpp  shader_test.cpp  sphere_test.cpp  textured_plane_test.cpp  transform1_test.cpp  transform2_test.cpp  transform_test.cpp  triangle_test.cpp  window_test.cpp
